--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -169,3 +170,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# HPC Toolkit files
+job_scripts/hpctoolkit/*.o*
+job_scripts/hpctoolkit/*.e*
+job_scripts/hpctoolkit/hpctoolkit-*
+job_scripts/hpctoolkit/gmon.out
